--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "n8n Co Pilot",
+  "name": "8pilot",
   "version": "1.0",
   "description": "AI assistant for building n8n workflows",
   "manifest_version": 3,
