--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,7 @@
         "sidepanel/sidepanel.js",
         "sidepanel/sidepanel.css",
         "icons/chat-icon-48.png",
+        "icons/icon128.png",
         "popup-final.js"
       ],
       "matches": ["<all_urls>"]
